# misc-projects

./: .gitignore  README.md  add_to_cortex.py  add_to_notion.py  update_notion_status.py  update_projects_page.py
Linear Algebra/: .gitignore  README.md  Topics_Chapters_1-5.md  linear_algebra_plan.md  pyproject.toml
Linear Algebra/apps/: hill_cipher.py  markov_chain.py
Linear Algebra/bindings/verify/: verify_ch1.py  verify_ch2.py  verify_ch3.py
Linear Algebra/docs/plans/: 2026-04-03-colab-notebooks-design.md  2026-04-03-colab-notebooks-plan.md  2026-04-03-proof-first-engine-plan.md
Linear Algebra/docs/reference/: textbook-notes-ch1-2.md  textbook-notes-ch3-5.md
Linear Algebra/engine/: Makefile
Linear Algebra/engine/include/: la_determinant.h  la_elimination.h  la_inner.h  la_matrix.h  la_ops.h  la_vecspace.h
Linear Algebra/engine/src/: la_determinant.cpp  la_elimination.c  la_inner.c  la_matrix.cpp  la_ops.c  la_vecspace.cpp
Linear Algebra/linalg_core/: __init__.py  determinant.py  elimination.py  inner.py  matrix.py  ops.py  vecspace.py
Linear Algebra/notebooks/ch1_systems/: 1_1_intro_to_systems.ipynb  1_2_gaussian_elimination.ipynb  1_3_applications_of_systems.ipynb
Linear Algebra/notebooks/ch2_matrices/: 2_1_operations_with_matrices.ipynb  2_2_properties_of_matrix_operations.ipynb  2_3_inverse_of_a_matrix.ipynb  2_4_elementary_matrices.ipynb  2_5_markov_chains.ipynb  2_6_applications_of_matrix_operations.ipynb
Linear Algebra/web/: package.json
Linear Algebra/web/src/: basis-explorer.ts  gram-schmidt-3d.ts  (+1 more)
Linear Algebra/wrapper/: CMakeLists.txt
(+207 files in other folders)
