[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linalg-core"
version = "0.1.0"
description = "From-scratch linear algebra implementations for learning"
requires-python = ">=3.10"

[project.optional-dependencies]
verify = ["numpy>=1.24", "matplotlib>=3.7"]
